packages/perseus-editor/src/styles/perseus-editor.css
/* ... */
#problemarea {
    font-size: 14px;
    position: relative;
    float: left;
    padding-bottom: 38px;
}
#problemarea a:link,
#problemarea input,
#problemarea label,
#problemarea select {
    /* for dropdowns */
    position: relative;
    z-index: 3;
    /* interactive-content */
}
.perseus-editor-row {
    display: flex;
    flex-direction: row;
}
.perseus-editor-left-cell {
    display: flex;
    flex-direction: column;
    vertical-align: top;
    width: 360px;
    max-width: 360px;
    min-width: 360px;
    position: relative;
    z-index: 10;
    /* Make the left cell scrollable. */
    overflow-y: auto;
    /* Keep the left cell scroll area within the viewport. */
    max-height: 90vh;
}
.perseus-editor-right-cell {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    padding: 30px;
    padding-top: 5px;
    vertical-align: top;
    /* Make the right cell scrollable. */
    overflow-y: auto;
    /* Keep the right cell scroll area within the viewport. */
    max-height: 90vh;
}
.perseus-hint-editor {
    padding-bottom: 20px;
}
.perseus-hint-editor .perseus-single-editor {
    margin-bottom: 5px;
}
.perseus-hint-editor .reorder-hints button {
    font-size: 16px;
}
.perseus-hint-editor .reorder-hints button:hover,
.perseus-hint-editor .reorder-hints button:active {
    color: #000;
    text-decoration: none;
}
.perseus-hint-editor .reorder-hints button.hidden {
    visibility: hidden;
}
.perseus-hint-editor .remove-hint {
    float: right;
    font-size: 13px;
    padding: 0 10px;
}
.perseus-hints-editor .add-hint {
    font-size: 13px;
}
.perseus-hints-editor
    .perseus-editor-row:first-child
    .perseus-editor-right-cell {
    border-top: 0;
}
.perseus-hint-editor + div .perseus-hint-renderer {
    width: 100%;
}
.perseus-hint-editor + div .perseus-hint-renderer div.paragraph {
    margin: 0px 0px 22px 0px;
}
.perseus-article-editor {
    margin-bottom: 20px;
    margin-top: 20px;
}
.perseus-article-editor .perseus-single-editor {
    margin-bottom: 10px;
}
.perseus-article-editor .section-control-button,
.perseus-article-editor .step-control-button {
    font-size: 13px;
    padding: 2px 10px;
    margin: 0 2px;
}
.perseus-article-editor .perseus-editor-left-cell {
    min-width: 360px;
}
.perseus-article-editor .mobile-preview,
.perseus-article-editor .desktop-preview,
.perseus-article-editor .editor-preview,
.perseus-article-editor .standalone-preview {
    box-sizing: border-box;
}
.perseus-article-editor .mobile-preview {
    border: 1px solid rgba(0, 0, 0, 0.29);
    max-width: 322px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.29);
    padding: 32px 16px;
}
.perseus-article-editor .desktop-preview {
    border: 1px solid transparent;
    padding: 32px 20px;
}
.perseus-article-editor .editor-preview {
    /* Make the preview scrollable. */
    overflow-y: auto;
    /* Keep the preview scroll area within the viewport. */
    max-height: 90vh;
}
.perseus-article-editor .editor-preview.full-width {
    width: 100%;
}
.perseus-article-editor .editor-preview .desktop-preview {
    border: 1px solid rgba(0, 0, 0, 0.29);
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.29);
    width: 100%;
}
.perseus-article-editor .standalone-preview .mobile-preview,
.perseus-article-editor .standalone-preview .desktop-preview {
    margin-left: auto;
    margin-right: auto;
}
.perseus-article-editor .json-editor {
    margin: auto;
    max-width: 688px;
}
.perseus-article-editor .perseus-json-editor {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.perseus-article-editor .json-editor-warning {
    margin-bottom: 10px;
    text-align: center;
}
.perseus-article-editor .framework-perseus.perseus-article {
    box-sizing: border-box;
}
.perseus-article-editor .framework-perseus.perseus-article * {
    box-sizing: inherit;
}
.perseus-article-editor .perseus-editor-left-cell > .pod-title {
    padding: 4px 9px;
}
.perseus-widget-dropdown input[type="text"] {
    border: 1px solid #ccc;
    border-radius: 5px;
    padding: 5px;
}

.perseus-widget-dropdown .dropdown-choices {
    margin: 20px 0;
}
.perseus-widget-dropdown .dropdown-choices .dropdown-choice {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    margin-bottom: 10px;
}

.perseus-widget-dropdown .dropdown-info {
    display: inline-flex;
    margin-bottom: 16px;
}
.perseus-widget-dropdown .dropdown-field {
    display: flex;
    flex-direction: row;
    align-items: center;
    min-width: 0;
    margin-bottom: 16px;
}
.perseus-widget-dropdown .remove-choice {
    margin-bottom: 10px;
}
.perseus-input-number-editor {
    font-family: Lato, "Noto Sans", sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 20px;
}
.perseus-input-number-editor .answer-option .unsimplified-options {
    min-height: 48px;
}
.perseus-input-number-editor .perseus-textarea-pair {
    font-size: 16px;
}
.perseus-input-number-editor .perseus-textarea-pair .perseus-textarea-underlay {
    margin-bottom: 26px;
}
.perseus-input-number-editor .perseus-textarea-pair textarea {
    background-color: #ffffff;
    border: 1px solid rgba(33, 36, 44, 0.5);
    border-radius: 4px;
}
.perseus-input-number-editor .input-answer-editor-value,
.perseus-input-number-editor .input-answer-editor-message {
    display: inline-block;
}
.perseus-input-number-editor .input-answer-editor-value-container {
    display: block;
}
.perseus-input-number-editor .input-answer-editor-value-container input {
    background: #ffffff;
    border: 1px solid rgba(33, 36, 44, 0.5);
    border-radius: 4px;
    color: #21242c;
    font-family: Lato, "Noto Sans", sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 20px;
    outline-offset: -2px;
}
.perseus-input-number-editor
    .input-answer-editor-value-container
    .numeric-input-value {
    margin-left: 8px;
    width: 6em;
}
/* ... */

